--- a/index.html
+++ b/index.html
@@ -1,160 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Harold Jirro's Portfolio</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0;
-      background-color: #2e0f13;
-      color: #f4e6e7;
-    }
-
-    header {
-      background-color: #5a1e2d;
-      padding: 20px;
-      text-align: center;
-    }
-
-    header h1 {
-      margin: 10px 0 5px;
-      font-size: 2.5em;
-    }
-
-    header p {
-      margin: 5px 0 15px;
-    }
-
-    .avatar {
-      width: 120px;
-      height: 120px;
-      border-radius: 50%;
-      border: 3px solid #f4b6c2;
-      object-fit: cover;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.4);
-    }
-
-    nav {
-      display: flex;
-      justify-content: center;
-      background-color: #7b2233;
-    }
-
-    nav a {
-      color: #f4e6e7;
-      text-decoration: none;
-      padding: 14px 20px;
-      display: inline-block;
-    }
-
-    nav a:hover {
-      background-color: #9c2e44;
-    }
-
-    section {
-      padding: 40px 20px;
-      max-width: 900px;
-      margin: auto;
-    }
-
-    h2 {
-      color: #f4b6c2;
-      border-bottom: 2px solid #f4b6c2;
-      padding-bottom: 10px;
-    }
-
-    .card {
-      background-color: #3c151c;
-      padding: 20px;
-      border-radius: 10px;
-      margin-bottom: 20px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.4);
-    }
-
-    .cert-image {
-      width: 100%;
-      max-width: 500px;
-      margin-top: 10px;
-      border-radius: 8px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
-    }
-
-    footer {
-      text-align: center;
-      background-color: #5a1e2d;
-      padding: 20px;
-      color: #f4e6e7;
-      margin-top: 40px;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>A Royal Love</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet" />
 </head>
-
 <body>
-  <header>
-    <img src="jirro.jpg" alt="Avatar" class="avatar">
-    <h1>Harold Jirro I. Madrona</h1>
-    <p>BS Information Technology | 3rd Year College | 20</p>
-  </header>
+  <!-- Heart Background Animation -->
+  <div class="hearts"></div>
 
-  <nav>
-    <a href="#objective">Objective</a>
-    <a href="#skills">Skills</a>
-    <a href="#experience">Experience</a>
-    <a href="#certifications">Certifications</a>
-    <a href="#about">About Me</a>
-  </nav>
+  <!-- Music Toggle Button -->
+  <button id="musicToggle">🔊</button>
+  <audio id="bgMusic" autoplay loop>
+    <source src="music.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
 
-  <section id="objective">
-    <h2>Professional Objective</h2>
-    <div class="card">
-      <p>To leverage my designing and frontend skils in a challenging environment that allows me to contribute to innovative projects and continuously grow as a professional frontend developer.</p>
+  <!-- Title -->
+  <h1 class="title">A Royal Gift for You My Love</h1>
+
+  <!-- Slideshow Container -->
+  <div class="slideshow-container">
+
+    <div class="slide">
+      <div class="image-container"><img src="micha1.jpg" alt="Michaela 1"></div>
+      <p>Hi Love, this is something special I made just for you. ❤️</p>
     </div>
-  </section>
 
-  <section id="skills">
-    <h2>Skills</h2>
-    <div class="card">
-      <ul>
-        <li>GitHub</li>
-        <li>Frontend</li>
-        <li>UI/UX Design</li>
-        <li>HTML, CSS, JavaScript</li>
-      </ul>
+    <div class="slide">
+      <div class="image-container"><img src="micha2.jpg" alt="Michaela 2"></div>
+      <p>Even though we're far apart, my heart is always with you.</p>
     </div>
-  </section>
 
-  <section id="experience">
-    <h2>Experience</h2>
-    <div class="card">
-      <h3>Don't have any experience yet</h3>
-  </section>
-
-  <section id="certifications">
-    <h2>Certifications</h2>
-    <div class="card">
-      <ul>
-    
-    </ul>
-      <img src="cert1.jpg" alt="Certificate Example" class="cert-image">
-      <img src="cert2.png" alt="Certificate Example" class="cert-image">
-      <img src="cert3.png" alt="Certificate Example" class="cert-image">
+    <div class="slide">
+      <div class="image-container"><img src="micha3.jpg" alt="Michaela 3"></div>
+      <p>You're the first person I think of when I wake up and the last when I sleep.</p>
     </div>
-  </section>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <div class="card">
-      <p>Hello! I'm Harold Jirro, a passionate college student with a love for frontend designs. I enjoy designing websites, and intuitive solutions. When I’m not coding, you’ll find me playing Basketball, playing online games, and watching movies.</p>
+    <div class="slide">
+      <div class="image-container"><img src="micha4.jpg" alt="Michaela 4"></div>
+      <p>Every day, I feel so lucky to call you mine.</p>
     </div>
-  </section>
 
-  <footer>
-    <p>Contact: haroldjirro@gmail.com | Phone: 09542868276</p>
-    <p>&copy; 2025 Jirrocchio</p>
-  </footer>
+    <div class="slide">
+      <div class="image-container"><img src="micha5.jpg" alt="Michaela 5"></div>
+      <p>Your smile is my favorite view, even from miles away.</p>
+    </div>
+
+    <div class="slide">
+      <div class="image-container"><img src="micha6.jpg" alt="Michaela 6"></div>
+      <p>I miss you more than words can say, but I know we’re stronger than the distance.</p>
+    </div>
+
+    <div class="slide">
+      <div class="image-container"><img src="micha7.jpg" alt="Michaela 7"></div>
+      <p>Thank you for loving me the way you do.</p>
+    </div>
+
+    <div class="slide">
+      <div class="image-container"><img src="micha8.jpg" alt="Michaela 8"></div>
+      <p>You are my peace, my joy, and my forever.</p>
+    </div>
+
+    <div class="slide">
+      <div class="image-container"><img src="micha9.jpg" alt="Michaela 9"></div>
+      <p>I can't wait for the day I finally get to hold you again.</p>
+    </div>
+
+    <div class="slide">
+      <div class="image-container"><img src="micha10.jpg" alt="Michaela 10"></div>
+      <p>Until then, just know you're always in my heart. ❤️</p>
+    </div>
+
+    <div class="slide">
+      <div class="image-container"><img src="micha11.jpg" alt="Michaela 11"></div>
+      <p>I love you, Michaela. Forever yours — Your King 👑</p>
+    </div>
+
+  </div>
+
+  <script src="script.js"></script>
 </body>
-
 </html>
