--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <!-- Heart Background Animation -->
   <div class="hearts"></div>
 
-  
+  <!-- Music Toggle Button -->
+  <button id="musicToggle">🔊</button>
   <audio id="bgMusic" autoplay loop>
     <source src="music.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
